--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -13,3 +13,18 @@ html,body {
     background-size: cover;
   }
 
+.whiteborder {
+  background-color: rgba(127, 170, 117, 0.5);
+  border-radius: 0.4em;
+  padding: 1em;
+}
+
+.nodecor {
+  text-decoration: none !important;
+}
+
+.button {margin-top:10px;}
+
+i{
+  padding-right:5px;
+}
